syntax = "proto3";
package com.vang.grpc;
option java_package = "com.vang.orderservice.gen";
option java_multiple_files = true;
option java_outer_classname = "GetAuthCustomerClient";

service GetAuthCustomerInfo {
  rpc getInfo(GetAuthCustomerInfoRequest) returns (GetAuthCustomerInfoReply);
}

message GetAuthCustomerInfoRequest {
  int32 type = 1;
}

message GetAuthCustomerInfoReply {
  bool status = 1;
  string username = 2;
  string role = 3;
}